Perkin-UAT/force-app/main/default/objects/User/fields/accountId__c.field-meta.xml
<CustomField>
    <fullName>accountId__c</fullName>
    <description>fetches User&#39;s related account name</description>
    <formula>BLANKVALUE(  Contact.Account.Account_Short_Name__c ,  Contact.Account.Name )</formula>
    <label>accountId</label>
    <type>Text</type>
</CustomField>