Perkin-UAT/force-app/main/default/objects/User/fields/Approval_Route__c.field-meta.xml
<CustomField>
    <fullName>Approval_Route__c</fullName>
    <label>Approval Route</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QS3</fullName>
            </value>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>