Perkin-UAT/force-app/main/default/objects/User/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <description>used to define approver for AA.(Source: S-692498)</description>
    <inlineHelpText>used to define approver for AA</inlineHelpText>
    <label>Approver</label>
    <relationshipName>Approver</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>