Perkin-UAT/force-app/main/default/objects/User/fields/at_ProvinceState__c.field-meta.xml
<CustomField>
    <fullName>at_ProvinceState__c</fullName>
    <label>ProvinceState</label>
    <length>80</length>
    <type>Text</type>
</CustomField>