Perkin-UAT/force-app/main/default/objects/User/fields/at_SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>at_SalesOffice__c</fullName>
    <label>SalesOffice</label>
    <length>80</length>
    <type>Text</type>
</CustomField>