Perkin-UAT/force-app/main/default/objects/User/fields/at_TeamRole__c.field-meta.xml
<CustomField>
    <fullName>at_TeamRole__c</fullName>
    <label>TeamRole</label>
    <length>40</length>
    <type>Text</type>
</CustomField>