Perkin-UAT/force-app/main/default/objects/User/fields/B2B_SAP_Acct__c.field-meta.xml
<CustomField>
    <fullName>B2B_SAP_Acct__c</fullName>
    <description>Used for ecommerce self-registration to capture an SAP account number from customer</description>
    <inlineHelpText>Used for ecommerce self-registration to capture an SAP account number from customer</inlineHelpText>
    <label>Customer Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>