Perkin-UAT/force-app/main/default/objects/User/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <label>Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EH</fullName>
            </value>
            <value>
                <fullName>DX</fullName>
            </value>
            <value>
                <fullName>LST</fullName>
            </value>
            <value>
                <fullName>Informatics</fullName>
            </value>
            <value>
                <fullName>OneSource</fullName>
            </value>
            <value>
                <fullName>Corp IT</fullName>
            </value>
            <value>
                <fullName>Corp Legal</fullName>
            </value>
            <value>
                <fullName>Corp Mrkt</fullName>
            </value>
            <value>
                <fullName>Corp HR</fullName>
            </value>
            <value>
                <fullName>Corp Operations</fullName>
            </value>
            <value>
                <fullName>Corp Finance</fullName>
            </value>
            <value>
                <fullName>Food Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>