Perkin-UAT/force-app/main/default/objects/User/fields/Can_Close_Won_Opps__c.field-meta.xml
<CustomField>
    <fullName>Can_Close_Won_Opps__c</fullName>
    <description>Indicates if a user is able to close won opportunities</description>
    <label>Can Close Won Opps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>