Perkin-UAT/force-app/main/default/objects/User/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <label>Cost Center</label>
    <length>25</length>
    <type>Text</type>
</CustomField>