Perkin-UAT/force-app/main/default/objects/User/fields/Country_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO_Code__c</fullName>
    <label>Country - ISO Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AFGHANISTAN -AF</fullName>
            </value>
            <value>
                <fullName>ALBANIA -AL</fullName>
            </value>
            <value>
                <fullName>ALGERIA -DZ</fullName>
            </value>
            <value>
                <fullName>AMERICAN SAMOA -AS</fullName>
            </value>
            <value>
                <fullName>ANDORRA -AD</fullName>
            </value>
            <value>
                <fullName>ANGOLA -AO</fullName>
            </value>
            <value>
                <fullName>ANGUILLA -AI</fullName>
            </value>
            <value>
                <fullName>ANTARCTICA -TF</fullName>
            </value>
            <value>
                <fullName>ANTARCTICA -AQ</fullName>
            </value>
            <value>
                <fullName>ANTIGUA &amp; BARBUDA -AG</fullName>
            </value>
            <value>
                <fullName>ARGENTINA -AR</fullName>
            </value>
            <value>
                <fullName>ARMENIA -AM</fullName>
            </value>
            <value>
                <fullName>ARUBA -AW</fullName>
            </value>
            <value>
                <fullName>AUSTRALIA -AU</fullName>
            </value>
            <value>
                <fullName>AUSTRIA -AT</fullName>
            </value>
            <value>
                <fullName>AZERBAIJAN -AZ</fullName>
            </value>
            <value>
                <fullName>BAHAMAS -BS</fullName>
            </value>
            <value>
                <fullName>BAHRAIN -BH</fullName>
            </value>
            <value>
                <fullName>BANGLADESH -BD</fullName>
            </value>
            <value>
                <fullName>BARBADOS -BB</fullName>
            </value>
            <value>
                <fullName>BELARUS -BY</fullName>
            </value>
            <value>
                <fullName>BELGIUM -BE</fullName>
            </value>
            <value>
                <fullName>BELIZE -BZ</fullName>
            </value>
            <value>
                <fullName>BENIN -BJ</fullName>
            </value>
            <value>
                <fullName>BERMUDA -BM</fullName>
            </value>
            <value>
                <fullName>BHUTAN -BT</fullName>
            </value>
            <value>
                <fullName>BOLIVIA -BO</fullName>
            </value>
            <value>
                <fullName>BOSNIA AND HERZEGOVINA -BA</fullName>
            </value>
            <value>
                <fullName>BOTSWANA -BW</fullName>
            </value>
            <value>
                <fullName>BOUVET ISLAND -BV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>