Perkin-UAT/force-app/main/default/objects/User/fields/CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyCode__c</fullName>
    <description>Created custom field as DefaultCurrencyCode is inaccessible through flows. Populated with P.FLOW:9020 on user</description>
    <label>CurrencyCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>