Perkin-UAT/force-app/main/default/objects/User/fields/Deactivation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Comments__c</fullName>
    <description>To be used for reporting purposes but also to document how the request for deactivation came in.</description>
    <inlineHelpText>Please enter the Jira or OnIT ticket that was used to request deactivation of this account.</inlineHelpText>
    <label>Deactivation Comments</label>
    <type>TextArea</type>
</CustomField>