Perkin-UAT/force-app/main/default/objects/User/fields/DeactivationDate__c.field-meta.xml
<CustomField>
    <fullName>DeactivationDate__c</fullName>
    <description>This is a Deactivation date set through the S.FLOW 6100. It can be future dated too for automation</description>
    <inlineHelpText>This is a Deactivation date set through the S.FLOW 6100. It can be future dated too for automation</inlineHelpText>
    <label>Deactivation Date</label>
    <type>Date</type>
</CustomField>