Perkin-UAT/force-app/main/default/objects/User/fields/Direct_Manager__c.field-meta.xml
<CustomField>
    <fullName>Direct_Manager__c</fullName>
    <description>[INF] - Used by FPX Firepond CPQ system and is hard coded so important to have and entry if the user is part of Informatics</description>
    <inlineHelpText>Used by FPX CPQ for Informatics</inlineHelpText>
    <label>Direct Manager</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>