Perkin-UAT/force-app/main/default/objects/User/fields/Dx_APAC_No_of_times_deactivated__c.field-meta.xml
<CustomField>
    <fullName>Dx_APAC_No_of_times_deactivated__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of no. of times deactivated</description>
    <label>No. of times deactivated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>