Perkin-UAT/force-app/main/default/objects/User/fields/Dx_APAC_No_of_times_reactivated__c.field-meta.xml
<CustomField>
    <fullName>Dx_APAC_No_of_times_reactivated__c</fullName>
    <defaultValue>0</defaultValue>
    <description>No. of times user is reactivated</description>
    <label>No. of times reactivated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>