Perkin-UAT/force-app/main/default/objects/User/fields/Emerging_Market__c.field-meta.xml
<CustomField>
    <fullName>Emerging_Market__c</fullName>
    <label>Emerging Market</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country_ISO_Code__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>