Perkin-UAT/force-app/main/default/objects/User/fields/flagForUpdate__c.field-meta.xml
<CustomField>
    <fullName>flagForUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this field as an arbitrary field to update to trigger a flow to run</description>
    <inlineHelpText>Use this field as an arbitrary field to update to trigger a flow to run</inlineHelpText>
    <label>flagForUpdate</label>
    <type>Checkbox</type>
</CustomField>