Perkin-UAT/force-app/main/default/objects/User/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <description>Employee’s role within PerkinElmer</description>
    <inlineHelpText>Employee’s role within PerkinElmer</inlineHelpText>
    <label>Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>