Perkin-UAT/force-app/main/default/objects/User/fields/fxAccountId__c.field-meta.xml
<CustomField>
    <fullName>fxAccountId__c</fullName>
    <description>ITSFDC-4806 (Creating field to show dealer account id so it can be used elsewhere for reporting</description>
    <formula>BLANKVALUE( Contact.Account.Account_Short_Name__c , Contact.Account.Name )</formula>
    <inlineHelpText>The Users Contact record Account ID (for partners)</inlineHelpText>
    <label>fxAccountId</label>
    <type>Text</type>
</CustomField>