Perkin-UAT/force-app/main/default/objects/User/fields/fxDomainEmail__c.field-meta.xml
<CustomField>
    <fullName>fxDomainEmail__c</fullName>
    <description>Pulls the email domain in this emial address</description>
    <formula>RIGHT( Email , LEN(Email) -  FIND(&quot;@&quot;, Email))</formula>
    <label>fxDomainEmail</label>
    <type>Text</type>
</CustomField>