Perkin-UAT/force-app/main/default/objects/User/fields/fxFullName__c.field-meta.xml
<CustomField>
    <fullName>fxFullName__c</fullName>
    <description>formula to make Full name available everywhere a user is used</description>
    <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
    <inlineHelpText>First and Last name of a user</inlineHelpText>
    <label>FullName</label>
    <type>Text</type>
</CustomField>