Perkin-UAT/force-app/main/default/objects/User/fields/fxManagerIsActive__c.field-meta.xml
<CustomField>
    <fullName>fxManagerIsActive__c</fullName>
    <description>This check that the direct manager is both Active and Not Forzen</description>
    <formula>Direct_Manager__r.IsActive =TRUE &amp;&amp; Direct_Manager__r.PKI_GBL_User_Frozen__c =FALSE</formula>
    <inlineHelpText>This check that the direct manager is both Active and Not Forzen</inlineHelpText>
    <label>fxManagerIsActive</label>
    <type>Checkbox</type>
</CustomField>