Perkin-UAT/force-app/main/default/objects/User/fields/fxManagerLine__c.field-meta.xml
<CustomField>
    <fullName>fxManagerLine__c</fullName>
    <description>This will display the Names of all the users Management Line within SFDC (not the same as HR system, but should be similar as not all users in HR are in SFDC.</description>
    <formula>&quot;[1] &quot; &amp; Manager.fxUserFullName__c  &amp; &quot;; &quot; 
&amp; &quot;[2] &quot; &amp; Manager.Manager.fxUserFullName__c  &amp; &quot;; &quot; 
&amp; &quot;[3] &quot; &amp; Manager.Manager.Manager.fxUserFullName__c  &amp; &quot;; &quot; 
&amp; &quot;[4] &quot; &amp; Manager.Manager.Manager.Manager.fxUserFullName__c  &amp; &quot;; &quot; 
&amp; &quot;[5] &quot; &amp; Manager.Manager.Manager.Manager.Manager.fxUserFullName__c &amp; &quot;; &quot; 
&amp; &quot;[6] &quot; &amp; Manager.Manager.Manager.Manager.Manager.Manager.fxUserFullName__c
&amp; &quot;[7] &quot; &amp; Manager.Manager.Manager.Manager.Manager.Manager.Manager.fxUserFullName__c
&amp; &quot;[8] &quot; &amp; Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.fxUserFullName__c
&amp; &quot;[9] &quot; &amp; Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.fxUserFullName__c
&amp; &quot;[10] &quot; &amp; Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.Manager.fxUserFullName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This will display the Names of all the users Management Line within SFDC (not the same as HR system, but should be similar as not all users in HR are in SFDC.</inlineHelpText>
    <label>fxManagerLine</label>
    <type>Text</type>
</CustomField>