Perkin-UAT/force-app/main/default/objects/User/fields/fxNextActiveManager__c.field-meta.xml
<CustomField>
    <fullName>fxNextActiveManager__c</fullName>
    <formula>If( (Direct_Manager__r.IsActive &amp;&amp; Direct_Manager__r.PKI_GBL_User_Frozen__c =FALSE) , Direct_Manager__c 
 , IF( (Direct_Manager__r.Direct_Manager__r.IsActive &amp;&amp; Direct_Manager__r.Direct_Manager__r.PKI_GBL_User_Frozen__c =FALSE) ,Direct_Manager__r.Direct_Manager__c
   , IF( (Direct_Manager__r.Direct_Manager__r.Direct_Manager__r.IsActive &amp;&amp; Direct_Manager__r.Direct_Manager__r.Direct_Manager__r.PKI_GBL_User_Frozen__c =FALSE) ,Direct_Manager__r.Direct_Manager__r.Direct_Manager__c ,null )))</formula>
    <label>fxNextActiveManager</label>
    <type>Text</type>
</CustomField>