Perkin-UAT/force-app/main/default/objects/User/fields/fxOrgLevel__c.field-meta.xml
<CustomField>
    <fullName>fxOrgLevel__c</fullName>
    <description>This is the position in the HR Feed of the user. The SFDC Line could be shorter due to who may/may not have an SFDC License.</description>
    <inlineHelpText>This is the position in the HR Feed of the user. The SFDC Line could be shorter due to who may/may not have an SFDC License.</inlineHelpText>
    <label>fxOrgLevel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>