Perkin-UAT/force-app/main/default/objects/User/fields/fxRoleName__c.field-meta.xml
<CustomField>
    <fullName>fxRoleName__c</fullName>
    <description>formula to get roll name of user for display/reporting</description>
    <formula>UserRole.Name</formula>
    <label>fxRoleName</label>
    <type>Text</type>
</CustomField>