Perkin-UAT/force-app/main/default/objects/User/fields/fxUser8Char__c.field-meta.xml
<CustomField>
    <fullName>fxUser8Char__c</fullName>
    <description>gets the right 8 characters of a user ID to use for complex formulas where needing to store many user ids in a field</description>
    <formula>RIGHT(Id,8)</formula>
    <label>fxUser8Char</label>
    <type>Text</type>
</CustomField>