Perkin-UAT/force-app/main/default/objects/User/fields/fxUserAttributes__c.field-meta.xml
<CustomField>
    <fullName>fxUserAttributes__c</fullName>
    <description>This is copy of fxUserExtraAttributes as flat text using P.FLOW 9020</description>
    <inlineHelpText>Attributes a user has</inlineHelpText>
    <label>fxUserAttributes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>