Perkin-UAT/force-app/main/default/objects/User/fields/fxUserInfo__c.field-meta.xml
<CustomField>
    <fullName>fxUserInfo__c</fullName>
    <description>concats several details used as 2nd line info in lookups</description>
    <formula>LEFT(Email &amp; &quot; / &quot; &amp; TEXT(Owned_by_Company__c) &amp; &quot; / &quot; &amp; Username &amp; &quot; / &quot; &amp; fxProfileName__c &amp; &quot; / &quot; &amp; fxRoleName__c &amp; &quot; / &quot; &amp; fxUserId18__c ,255)</formula>
    <inlineHelpText>concats several details used as 2nd line info in lookups</inlineHelpText>
    <label>fxUserInfo</label>
    <type>Text</type>
</CustomField>