Perkin-UAT/force-app/main/default/objects/User/fields/GeographyLevel__c.field-meta.xml
<CustomField>
    <fullName>GeographyLevel__c</fullName>
    <label>Geography Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_020_Territory_Level</valueSetName>
    </valueSet>
</CustomField>