Perkin-UAT/force-app/main/default/objects/User/fields/GeographyValue__c.field-meta.xml
<CustomField>
    <fullName>GeographyValue__c</fullName>
    <label>Geography Value</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>GeographyLevel__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>G_PICK_026_All_Territories</valueSetName>
    </valueSet>
</CustomField>