Perkin-UAT/force-app/main/default/objects/User/fields/Home_Country__c.field-meta.xml
<CustomField>
    <fullName>Home_Country__c</fullName>
    <label>Home Country</label>
    <length>15</length>
    <type>Text</type>
</CustomField>