Perkin-UAT/force-app/main/default/objects/User/fields/Home_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Home_State_Province__c</fullName>
    <label>Home State/Province</label>
    <length>2</length>
    <type>Text</type>
</CustomField>