Perkin-UAT/force-app/main/default/objects/User/fields/Home_Zip_Postal__c.field-meta.xml
<CustomField>
    <fullName>Home_Zip_Postal__c</fullName>
    <label>Home Zip/Postal</label>
    <length>15</length>
    <type>Text</type>
</CustomField>