Perkin-UAT/force-app/main/default/objects/User/fields/iManager__c.field-meta.xml
<CustomField>
    <fullName>iManager__c</fullName>
    <description>This solves for if the running user is also an upline Manager of the record owner</description>
    <formula>OR( ManagerId =  $User.Id 
,  Manager2up__c =  $User.Id
, CONTAINS( fxManagerLine__c , $User.fxUserFullName__c )
 )</formula>
    <inlineHelpText>This solves for if the running user is also an upline Manager of the record owner</inlineHelpText>
    <label>iManager</label>
    <type>Checkbox</type>
</CustomField>