Perkin-UAT/force-app/main/default/objects/User/fields/Lead_Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>Lead_Assignment_Rules__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field gets populated through a batch class and tells the count where current user is ASSIGNED TO  in a Lead Assignment Rule.</description>
    <label>Lead Assignment Rules</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>