Perkin-UAT/force-app/main/default/objects/User/fields/License_type__c.field-meta.xml
<CustomField>
    <fullName>License_type__c</fullName>
    <formula>Profile.UserLicense.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License type</label>
    <type>Text</type>
</CustomField>