Perkin-UAT/force-app/main/default/objects/User/fields/Manager2up__c.field-meta.xml
<CustomField>
    <fullName>Manager2up__c</fullName>
    <description>This is the 2nd level up, Direct manager of the direct manager</description>
    <formula>Direct_Manager__r.Direct_Manager__r.FirstName &amp; &quot; &quot; &amp;  Direct_Manager__r.Direct_Manager__r.LastName</formula>
    <inlineHelpText>The Direct manager of the direct manager</inlineHelpText>
    <label>Manager2up</label>
    <type>Text</type>
</CustomField>