Perkin-UAT/force-app/main/default/objects/User/fields/ManagerOfUsers__c.field-meta.xml
<CustomField>
    <fullName>ManagerOfUsers__c</fullName>
    <description>This field depicts the count where current user is a direct manager</description>
    <label>ManagerOfUsers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>