Perkin-UAT/force-app/main/default/objects/User/fields/mh_Blue_Sheet_Read_Write_License__c.field-meta.xml
<CustomField>
    <fullName>mh_Blue_Sheet_Read_Write_License__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAM Blue Sheet License for large orgs.</description>
    <label>Blue Sheet Read Write License</label>
    <type>Checkbox</type>
</CustomField>