Perkin-UAT/force-app/main/default/objects/User/fields/Owned_by_Company__c.field-meta.xml
<CustomField>
    <fullName>Owned_by_Company__c</fullName>
    <description>Determines whether the record belongs to one company vs. others (for example: LSDx vs AES) (Source: CMC Story #S-696758)</description>
    <label>Owned by Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_050_Owned_by_Company</valueSetName>
    </valueSet>
</CustomField>