Perkin-UAT/force-app/main/default/objects/User/fields/PKI_GBL_Sub_function__c.field-meta.xml
<CustomField>
    <fullName>PKI_GBL_Sub_function__c</fullName>
    <label>Sub-function</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PKI_GBL_Job_Family__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin + Site Support</fullName>
            </value>
            <value>
                <fullName>Admin Leadership</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Emerging Technologies</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>FPA</fullName>
            </value>
            <value>
                <fullName>Investor Relations</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Treasury</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>IT Applications</fullName>
            </value>
            <value>
                <fullName>IT E-Business</fullName>
            </value>
            <value>
                <fullName>IT Infrastructure</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Regulatory Compliance</fullName>
            </value>
            <value>
                <fullName>Corporate Communications</fullName>
            </value>
            <value>
                <fullName>Customer Care (Mkt)</fullName>
            </value>
            <value>
                <fullName>E-Business</fullName>
            </value>
            <value>
                <fullName>MarComm/Marketing</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Facilities/Maint/Mfg Other</fullName>
            </value>
            <value>
                <fullName>Health/Safety/Environmental</fullName>
            </value>
            <value>
                <fullName>Lifecycle Engineering</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Manufacturing Direct</fullName>
            </value>
            <value>
                <fullName>Manufacturing Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>