Perkin-UAT/force-app/main/default/objects/User/fields/PKICountry__c.field-meta.xml
<CustomField>
    <fullName>PKICountry__c</fullName>
    <label>PKI Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_025_Territory_Country</valueSetName>
    </valueSet>
</CustomField>