Perkin-UAT/force-app/main/default/objects/User/fields/PKICountryISOCode__c.field-meta.xml
<CustomField>
    <fullName>PKICountryISOCode__c</fullName>
    <label>PKI Country ISO Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>