Perkin-UAT/force-app/main/default/objects/User/fields/PKISubTerritory__c.field-meta.xml
<CustomField>
    <fullName>PKISubTerritory__c</fullName>
    <label>PKI Sub Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_024_Territory_Sub</valueSetName>
    </valueSet>
</CustomField>