Perkin-UAT/force-app/main/default/objects/User/fields/PKITerritory__c.field-meta.xml
<CustomField>
    <fullName>PKITerritory__c</fullName>
    <label>PKI Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_023_Territory</valueSetName>
    </valueSet>
</CustomField>