Perkin-UAT/force-app/main/default/objects/User/fields/Price_Book_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Visibility__c</fullName>
    <label>Price Book Visibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analytical</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Reproductive Health</fullName>
            </value>
            <value>
                <fullName>Applied Genomics</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>