Perkin-UAT/force-app/main/default/objects/User/fields/ProfileName__c.field-meta.xml
<CustomField>
    <fullName>ProfileName__c</fullName>
    <description>formual to get the text value of the profile name</description>
    <formula>Profile.Name</formula>
    <label>Profile Name</label>
    <type>Text</type>
</CustomField>