Perkin-UAT/force-app/main/default/objects/User/fields/Quote_Studio_Filter__c.field-meta.xml
<CustomField>
    <fullName>Quote_Studio_Filter__c</fullName>
    <label>Quote Studio Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>