Perkin-UAT/force-app/main/default/objects/User/fields/Reactivation_UnFreeze_Date__c.field-meta.xml
<CustomField>
    <fullName>Reactivation_UnFreeze_Date__c</fullName>
    <description>Date the user is either Reactivated or UnFrozen - (to assist in Reporting purposes and in Automation.)</description>
    <inlineHelpText>Please enter the date the user is either Reactivated or UnFrozen</inlineHelpText>
    <label>Reactivation/UnFreeze Date</label>
    <type>Date</type>
</CustomField>