Perkin-UAT/force-app/main/default/objects/User/fields/Related_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact_Name__c</fullName>
    <description>fetches User&#39;s related contact name</description>
    <formula>CASESAFEID( Contact.LastName )</formula>
    <label>Related Contact Name</label>
    <type>Text</type>
</CustomField>